--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
         "db:studio": "drizzle-kit studio"
     },
     "dependencies": {
+        "@grammyjs/transformer-throttler": "^1.2.1",
+        "dotenv": "^17.2.3",
         "drizzle-orm": "^0.44.7",
         "grammy": "^1.38.3",
-        "pg": "^8.16.3",
-        "dotenv": "^17.2.3"
+        "pg": "^8.16.3"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
